--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@
 # dependencies
 /node_modules
 
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+public/dist
 
 # testing
 /coverage
