Setup test database env

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "firebase": "^4.11.0",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
@@ -35,6 +36,8 @@
     "react-textarea-autosize": "^5.2.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.1",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "uuid": "^3.2.1",
@@ -46,10 +49,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "test-jest": "jest --watch",
-    "test-jest-con": "jest --config=jest.config.json --watch",
+    "test-jest-con": "cross-env NODE_ENV=test jest --config=jest.config.json --watch",
     "eject": "react-scripts eject",
     "start-server": "node server/server.js",
-    "heroku-postbuild": "yarn run build:prod", 
+    "heroku-postbuild": "yarn run build:prod",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "webpack": "webpack --watch",
@@ -57,6 +60,8 @@
     "babel": "babel src/index.js --out-file=public/bundle.js --presets=env,react --watch"
   },
   "devDependencies": {
+    "cross-env": "^5.1.4",
+    "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
